# todo-app-phase1

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/constitution/: 001-create-todo-app-constitution.constitution.prompt.md
history/prompts/core-todo-operations/: 001-create-core-todo-spec.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-complete-todo-implementation.green.prompt.md
specs/core-todo-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/core-todo-operations/contracts/: cli-contracts.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py
tests/: conftest.py
tests/contract/: __init__.py  test_cli_contracts.py
tests/unit/: test_task_service.py  test_validators.py
